# model-server

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  compile_protobufs.sh  create_pip_wheel_and_upload.sh  index.html  pyproject.toml  requirements.txt  search.html  setup.py  setup.sh  sitemap.xml
api_reference/core/: index.html
api_reference/utils/: index.html
docs/: README.md  build_and_serve.sh  create_documentation.py  custom_doc_processor.py  md_autogen.py  mkdocs.yml  pydoc-markdown.yaml
examples/: README.md  keras_image_classification.py  multiple_keras_models.py  simple_servable.py
examples/keras_image_classification/: keras_image_classification.py  keras_image_classification_client.ipynb
examples/multiple_keras_models/: multiple_keras_models.py  multiple_keras_models_client.ipynb
examples/simple_servable/: simple_servable.py  simple_servable_client.ipynb
model_server/: __init__.py  about.py  core.py  runserver.py  server.proto  server_pb2.py  server_pb2_grpc.py  utils.py
model_server.core/: index.html
model_server.utils.model_info_utils/: index.html
model_server.utils.prediction_utils/: index.html
model_server.utils.tensor_utils/: index.html
model_server/apis/: predict.proto  predict_pb2.py  predict_pb2_grpc.py
model_server/protos/: model_info.proto  model_info_pb2.py  model_info_pb2_grpc.py  tensor.proto  tensor_pb2.py  tensor_pb2_grpc.py
model_server/utils/: __init__.py  model_info_utils.py  prediction_utils.py  tensor_utils.py
search/: search_index.json
tests/: test_utils.py
(+2 files in other folders)
