[project]
name = "model-server"
version = "1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["grpcio>=1.74.0", "grpcio-tools>=1.74.0", "numpy>=2.3.2"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.setuptools]
packages = ["model_server"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "pre-commit>=4.2.0",
    "pydoc-markdown>=4.8.2",
    "pytest>=8.4.1",
]
